samples/_failures_safe/1761463112_1ba196_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8536bc8.c: In function ‘main’:
./samples/SAFE/__tmp_f8536bc8.c:128:12: error: missing terminating " character
  128 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_f8536bc8.c:128:5: error: expected expression at end of input
  128 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_f8536bc8.c:128:5: error: expected declaration or statement at end of input
